# libnodes

./: .gitignore  CMakeLists.txt  README.md
include/libnodes/: BundleNode.h  ImplicitConversionNode.h  Node.h  NodeContainer.h  ValueNode.h  algorithms.h  connection_container.h  nod_signal.h  operators.h  xlet_iterator.h
src/libnodes/: Node.cpp
test/: CMakeLists.txt  test_bundle_node.cpp  test_nodes.cpp  test_value_node.cpp  test_xlet_iteration.cpp
